<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/custom_clear"
    android:clickable="true"
    tools:context=".Fragment.AddNoteFragment">

    <TextView
        android:id="@+id/close_btn"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_gravity="end"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:background="@drawable/custom_round_corners_blue"
        android:elevation="10dp"
        android:paddingHorizontal="16dp"
        android:paddingVertical="8dp"
        android:text="X"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="32dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="16dp"
            android:background="@drawable/custom_round_corners_white"
            android:orientation="vertical">

            <TextView
                android:id="@+id/adding_note_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/adding_a_note"
                android:textColor="@color/custom_blue"
                android:textSize="@dimen/large_text"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/title_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/title_label"
                android:textSize="@dimen/medium_text"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/note_title_input"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:background="@drawable/custom_round_corners_grey"
                android:hint="@string/short_text"
                android:inputType="textCapSentences"
                android:maxLines="1"
                android:padding="8dp"
                android:textColor="@color/black"
                android:textSize="@dimen/medium_text" />


            <TextView
                android:id="@+id/note_desc_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:gravity="center"
                android:text="@string/description_label"
                android:textSize="@dimen/medium_text"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/note_content_input"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginBottom="16dp"
                android:layout_marginTop="8dp"
                android:background="@drawable/custom_round_corners_grey"
                android:gravity="top|start"
                android:hint="@string/long_text"
                android:inputType="textMultiLine|textCapSentences"
                android:lineSpacingExtra="1sp"
                android:maxLines="4"
                android:scrollbars="vertical"
                android:overScrollMode="always"
                android:scrollHorizontally="false"
                android:padding="8dp"
                android:textColor="@color/black"
                android:textSize="@dimen/medium_text" />

            <Button
                android:id="@+id/save_notes_btn"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_alignParentBottom="true"
                android:background="@drawable/custom_round_corners_blue"
                android:paddingHorizontal="16dp"
                android:paddingVertical="4dp"
                android:text="@string/save"
                android:textSize="@dimen/normal_text" />

        </LinearLayout>
    </RelativeLayout>

</androidx.constraintlayout.widget.ConstraintLayout>